<resources>
    <string name="app_name">KKN DR 131</string>
    <string name="tentang_app">Aplikasi ini dibuat sebagai proker (program kerja) KKN-DR dalam bidang Pedidikan dan Dakwah Keagamaan. aplikasi ini dibuat oleh kelompok Pemanfaatan Teknologi Tepat Guna KKN-DR Group 131</string>
    <string name="kkn1">KKN-IK DR merupakan Kuliah Kerja Nyata yang di desain secara integratif antara pengabdian kepada masyarakat dengan praktik profesi sesuai kompetensi keilmuan yang pelaksanaannya berbasis dari rumah. Desain ini diterapkan dalam situasi pandemi COVID-19.</string>
    <string name="kkn2">Sebagaimana Surat Edaran dari Dirjen Pendis No. 697/03/2020 tentang Upaya Pencegahan Penyebaran Covid-19 di Lingkungan PTKIN dan Surat Direktur Diktis No. B-713/DJ.I/Dt.I.III/TL.00/04/2020 sebagai tindak lanjut Surat Edaran Dirjen Pendis di bidang Litapdimas (Penelitian, Publikasi, Ilmiah, dan Pengabdian Pada Masyarakat) mewajibkan seluruh Perguruan Tinggi Keagamaan Islam baik Swasta maupun Negeri untuk menyelenggarakan Kuliah Kerja Nyata berbasis online atau KKN-IK DR.</string>
    <string name="kkn3">KKN IK DR 2020 ini, mahasiswa dituntut berkarya sekreatif mungkin dengan memanfaatkan teknologi dan media sosial yang ada. Mampu memanfaatkan platform media yang sudah tersedia banyak seperti aplikasi google meet, zoom cloud meeting, instagram, facebook, youtube dan lainnya. Seperti membuat contens creative, flyer atau meme, video-video unik lalu di apload ke internet. Akhirnya KKN tahun ini dengan susana yang berbeda ini menjadikan tantangan seru tersendiri bagi mahasiswa supaya selalu melek teknologi.</string>
    <string name="uin1">Universitas Islam Negeri Sultan Syarif Kasim Riau disebut juga UIN Suska (Sebelumnya: IAIN Sulthan Syarif Qasim Pekanbaru) (Bahasa Arab: adalah جامعة السلطان شريف قاسم الإسلامية اﻟﺤﻜﻮمية رياو dan dalam Bahasa Inggris: State Islamic University of Sultan Syarif Kasim Riau) adalah sebuah Universitas Islam Negeri yang berada di Simpang Baru, Tampan, Pekanbaru. Penamaannya dengan Sultan Syarif Kasim yaitu nama sultan ke-12 atau sultan terakhir Kesultanan Siak Sri Inderapura.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pend_tauhid1">Dari hasil pengkajian terhadap dalil-dalil tauhid yang dilakukan para ulama sejak dahulu hingga sekarang, mereka menyimpulkan bahwa ada tauhid terbagi menjadi tiga: Tauhid Rububiyah, Tauhid Uluhiyah dan Tauhid Al Asma Was Shifat.</string>
    <string name="tauhid1">Tauhid Rububiyyah adalah mentauhidkan Allah dalam kejadian-kejadian yang hanya bisa dilakukan oleh Allah, serta menyatakan dengan tegas bahwa Allah Ta’ala adalah Rabb, Raja, dan Pencipta semua makhluk, dan Allahlah yang mengatur dan mengubah keadaan mereka. (Al Jadid Syarh Kitab Tauhid, 17). Meyakini rububiyah yaitu meyakini kekuasaan Allah dalam mencipta dan mengatur alam semesta, misalnya meyakini bumi dan langit serta isinya diciptakan oleh Allah, Allahlah yang memberikan rizqi, Allah yang mendatangkan badai dan hujan, Allah menggerakan bintang-bintang, dll.</string>
    <string name="tauhid2">Tauhid Uluhiyyah adalah mentauhidkan Allah dalam segala bentuk peribadahan baik yang zhahir maupun batin (Al Jadid Syarh Kitab Tauhid, 17).</string>
    <string name="tauhid3">Tauhid Al Asma’ was Sifat adalah mentauhidkan Allah Ta’ala dalam penetapan nama dan sifat Allah, yaitu sesuai dengan yang Ia tetapkan bagi diri-Nya dalam Al Qur’an dan Hadits Rasulullah shallallahu’alaihi wasallam.</string>
</resources>