<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEF0F1"
    tools:context=".Kkn">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="220sp"
        android:background="@color/hijau_kkn">
        <ImageView
            android:id="@+id/imgapp"
            android:layout_width="120sp"
            android:layout_height="120sp"
            android:src="@drawable/kkn1"
            android:layout_marginTop="30sp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/radius_oval"
            ></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tentang KKN-DR PLUS"
            android:layout_below="@+id/imgapp"
            android:layout_centerHorizontal="true"
            android:textColor="#fff"
            android:textSize="24sp"
            android:fontFamily="monospace"
            android:layout_marginTop="10sp"></TextView>
    </RelativeLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_am"
        android:layout_below="@id/rl">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:layout_marginLeft="24sp"
            android:layout_marginBottom="10sp"
            android:layout_marginRight="24sp"
            android:background="@drawable/radius_panel_menu1"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24sp"
                android:layout_marginRight="24sp"
                android:textColor="#000"
                android:justificationMode="inter_word"
                android:fontFamily="casual"
                android:text="@string/kkn1">
            </TextView>
            <TextView
                android:layout_marginTop="10sp"
                android:justificationMode="inter_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24sp"
                android:layout_marginRight="24sp"
                android:textColor="#000"
                android:fontFamily="casual"
                android:text="@string/kkn2"></TextView>
            <TextView
                android:layout_marginTop="10sp"
                android:justificationMode="inter_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24sp"
                android:layout_marginRight="24sp"
                android:textColor="#000"
                android:fontFamily="casual"
                android:layout_marginBottom="24sp"
                android:text="@string/kkn3">
            </TextView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>