<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_am"
    tools:context=".Pendidikan_Tauhid">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_am">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:layout_marginLeft="24sp"
            android:layout_marginRight="24sp"
            android:background="@drawable/radius_panel_menu1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24sp"
                android:layout_marginRight="24sp"
                android:textColor="@color/hitam"
                android:textStyle="bold"
                android:layout_marginBottom="24sp"
                android:layout_marginTop="24sp"
                android:fontFamily="casual"
                android:textSize="30sp"
                android:text="BELAJAR TAUHID"
                android:gravity="center_horizontal"></TextView>
            <TextView
                android:layout_marginLeft="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pembagian Tauhid"
                android:textColor="@color/hitam"
                android:textSize="16sp"
                android:textStyle="bold"></TextView>
            <TextView
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp"
                android:layout_width="match_parent"
                android:justificationMode="inter_word"
                android:layout_height="wrap_content"
                android:text="@string/pend_tauhid1"
                android:textColor="@color/hitam"
                android:fontFamily="monospace"
                android:textStyle="normal"></TextView>
            <TextView
                android:layout_marginLeft="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="(1) Tauhid Rububiyyah"
                android:textColor="@color/hitam"
                android:textSize="16sp"
                android:textStyle="bold"></TextView>
            <TextView
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/tauhid1"
                android:textColor="@color/hitam"
                android:fontFamily="monospace"
                android:textStyle="normal"></TextView>
            <TextView
                android:layout_marginLeft="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="(2) Tauhid Uluhiyyah"
                android:textColor="@color/hitam"
                android:textSize="16sp"
                android:textStyle="bold"></TextView>
            <TextView
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/tauhid2"
                android:textColor="@color/hitam"
                android:fontFamily="monospace"
                android:textStyle="normal"></TextView>
            <TextView
                android:layout_marginLeft="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="(3) Tauhid Al Asma’ was Sifat"
                android:textColor="@color/hitam"
                android:textSize="16sp"
                android:textStyle="bold"></TextView>
            <TextView
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/tauhid3"
                android:textColor="@color/hitam"
                android:fontFamily="monospace"
                android:layout_marginBottom="24sp"
                android:textStyle="normal"></TextView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>